# syntaur

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README-syntaur.md  README.md  SECURITY.md  build-release.sh  index.html  install.ps1  install.sh
crates/rust-aidot/: Cargo.toml
crates/rust-aidot-harvest/: Cargo.toml
crates/rust-aidot-harvest/src/: lib.rs
crates/rust-aidot/src/: crypto.rs  harvest.rs  lib.rs  protocol.rs
crates/rust-kasa/: Cargo.toml
crates/rust-kasa/src/: device.rs  harvest.rs  http_raw.rs  inventory.rs  klap.rs  lib.rs
crates/rust-nexia/: Cargo.toml
crates/rust-nexia/src/: lib.rs  thermostat.rs
crates/syntaur-dictate/: Cargo.toml
crates/syntaur-dictate/src/: main.rs
crates/syntaur-matter/: Cargo.toml
crates/syntaur-matter-ble/: Cargo.toml
crates/syntaur-matter-ble/src/: btp.rs  caps.rs  case_udp.rs  lib.rs  scan.rs
crates/syntaur-matter-ip/: Cargo.toml
crates/syntaur-matter-ip/src/: lib.rs
crates/syntaur-matter/src/: commission.rs  error.rs  fabric.rs  lib.rs  pairing.rs  persist.rs  sign.rs  tlv_build.rs
crates/syntaur-privacy/: Cargo.toml
crates/syntaur-privacy/data/: cloud_domains.yaml
crates/syntaur-privacy/src/: dns_sinkhole.rs  error.rs  lib.rs  monitor.rs  policy.rs  registry.rs
crates/syntaur-topo/: Cargo.toml
crates/syntaur-topo/src/: lib.rs  manifest.rs  resolve.rs
mace/: Cargo.toml
mace/src/: main.rs  tools.rs
mcp-protocol/: Cargo.toml
mcp-protocol/src/: lib.rs  messages.rs  server.rs  stdio.rs
mcp-server-filesystem-rs/: Cargo.toml
mcp-server-filesystem-rs/src/: main.rs  ops.rs  paths.rs  tools.rs
mcp-server-search-rs/: Cargo.toml
mcp-server-search-rs/src/: main.rs
openclaw-capability-shim/: Cargo.toml
openclaw-capability-shim/src/: main.rs
openclaw-hwscan/: Cargo.toml
openclaw-hwscan/examples/: scan.rs
openclaw-hwscan/src/: gpu.rs  lib.rs  network.rs  recommend.rs
openclaw-mod/: Cargo.toml
openclaw-mod/src/: main.rs
openclaw-setup/: Cargo.toml
openclaw-setup/src/: lib.rs  main.rs
rust-media-bridge/: Cargo.toml
rust-media-bridge/scripts/: install.ps1  install.sh
rust-media-bridge/src/: auth.rs  browser.rs  events.rs  main.rs  server.rs  state.rs
rust-media-bridge/src/audio/: linux.rs  macos.rs  mod.rs  windows.rs
rust-media-bridge/src/providers/: apple_music.rs  mod.rs  spotify.rs  tidal.rs  youtube_music.rs
syntaur-ble-shim/: Cargo.toml
syntaur-ble-shim/packaging/haos-addon/: .gitignore  Dockerfile  README.md  config.yaml  run.sh
syntaur-ble-shim/packaging/systemd/: README.md  install.sh  syntaur-ble-shim.service
syntaur-ble-shim/src/: codec.rs  config.rs  main.rs  mdns.rs  protocol.rs  scanner.rs  server.rs
syntaur-gateway/: Cargo.toml  VOICE_PIPELINE_DESIGN.md  build.rs
syntaur-gateway/src/: audit.rs  background_tasks.rs  calendar_reminder.rs  circuit_breaker.rs  config.rs  conversations.rs  cron.rs  crypto.rs  dashboard_api.rs  drafts.rs  financial.rs  fs_browser.rs  hooks.rs  lcm.rs  license.rs  llm.rs  main.rs  mcp_sandbox.rs  modules.rs  music.rs  music_local.rs  plans.rs  rate_limit.rs  security.rs  setup.rs  setup_install.rs  skills.rs  slash.rs  sync.rs  tailscale.rs  tax.rs  tax_pdf.rs  telegram.rs  tool_hooks.rs  trading.rs  trading_summary.rs  vault.rs  voice_api.rs  voice_chat.rs  voice_ws.rs
syntaur-gateway/src/agents/: compressed_memory.rs  compute.rs  context_budget.rs  defaults.rs  endpoints.rs  escalation.rs  handoff.rs  import.rs  mod.rs  settings.rs  tasks.rs  templates.rs
syntaur-gateway/src/approval/: mod.rs
syntaur-gateway/src/auth/: mod.rs  principal.rs  users.rs
syntaur-gateway/src/connectors/: mod.rs  scheduler.rs
syntaur-gateway/src/index/: embed.rs  mod.rs  schema.rs  search.rs
syntaur-gateway/src/ledger/: mod.rs
syntaur-gateway/src/mcp/: client.rs  mod.rs
syntaur-gateway/src/oauth/: pkce.rs  state.rs  tokens.rs
syntaur-gateway/src/pages/: agent_settings_card.rs  chat.rs  coders.rs  dashboard.rs  dashboard_widgets.rs  history.rs  journal.rs  knowledge.rs  landing.rs  library.rs  mod.rs  modules.rs  music.rs  onboarding.rs  profile.rs  register.rs  research.rs  scheduler.rs  settings.rs  settings_agents.rs  settings_legacy.rs  setup.rs  shared.rs  smart_home.rs  smart_home_ble.rs  smart_home_esphome.rs  social.rs  tailscale_setup.rs  tax.rs  theme.rs  voice_setup.rs
syntaur-gateway/src/research/: agent.rs  clarify.rs  events.rs  evidence.rs  mod.rs  orchestrate.rs  prompts.rs  store.rs
syntaur-gateway/src/smart_home/: api.rs  automation.rs  credentials.rs  devices.rs  diagnostics.rs  energy.rs  esphome_discovery.rs  events.rs  firmware_flash.rs  firmware_role.rs  matter_bridge.rs  mod.rs  nexia_bridge.rs  nl_automation.rs  presence.rs  rooms.rs  scan.rs  vendor_bridge.rs
syntaur-gateway/src/social/: engine.rs  mod.rs
syntaur-gateway/src/terminal/: forwarding.rs  hosts.rs  mod.rs  pty.rs  recording.rs  session.rs  sftp.rs  ssh.rs  ws.rs
syntaur-gateway/src/tools/: account.rs  agent_memory.rs  browser.rs  built_in_tools.rs  calendar.rs  camera.rs  captcha.rs  code_execute.rs  email.rs  matter.rs  (+31 more)
syntaur-gateway/static/: chat.html  dashboard.html  fonts.css  history.html  journal.html  landing.html  manifest.json  modules.html  music.html  settings.html  setup.html  tax.html  tax_brackets.json  voice-setup.html
syntaur-isolation-tests/: Cargo.toml
syntaur-isolation-tests/src/: main.rs
syntaur-license-server/: Cargo.toml  VOICE_TRAINING.md  WAKE_WORD_TRAINING.md
syntaur-license-server/src/: config.rs  main.rs
syntaur-mod/: Cargo.toml
syntaur-mod/src/: main.rs
syntaur-sdk/: Cargo.toml
syntaur-sdk/src/: lib.rs  manifest.rs  module.rs  tool.rs  types.rs
syntaur-setup/: Cargo.toml
syntaur-setup/src/: lib.rs  main.rs
syntaur-ship/: Cargo.toml
syntaur-ship/hooks/: pre-commit  pre-push
syntaur-ship/src/: ci_audit.rs  config.rs  coord.rs  guards.rs  journal.rs  main.rs  pipeline.rs  release.rs  stamp_sign.rs  state.rs
syntaur-viewer/: Cargo.toml
syntaur-viewer/src/: main.rs
syntaur-voice-pipeline/: Cargo.toml
syntaur-voice-pipeline/src/: intent.rs  main.rs  stt.rs  wyoming.rs
(+241 files in other folders)
