[workspace]
resolver = "2"
members = [
    "mcp-protocol",
    "mcp-server-filesystem-rs",
    "mcp-server-search-rs",
    "syntaur-capability-shim",
    "syntaur-gateway",
    "syntaur-voice-pipeline",
    "syntaur-sdk",
    "syntaur-mod",
    "syntaur-hwscan",
    "syntaur-setup",
    "syntaur-license-server",
    "syntaur-viewer",
    "rust-media-bridge",
    "mace",
    "syntaur-isolation-tests",
    "syntaur-ship",
    "crates/syntaur-zwave",
    "crates/rust-aidot",
    "crates/rust-kasa",
    "crates/rust-nexia",
    "crates/syntaur-matter",
    "crates/syntaur-matter-ble",
    "crates/syntaur-matter-ip",
]

[workspace.package]
# Single source of truth for the main product version. All crates that
# track the Syntaur release line inherit this via `version.workspace = true`.
# Independent sub-crates (crates/rust-aidot, crates/rust-kasa, crates/rust-nexia,
# crates/syntaur-matter, crates/syntaur-matter-ble, crates/syntaur-zwave,
# mcp-server-filesystem-rs, syntaur-hwscan, syntaur-license-server, syntaur-mod)
# keep their own versions so they can be released on their own cadence.
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Sean"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
