[workspace]
resolver = "2"
members = [
    "mcp-protocol",
    "mcp-server-filesystem-rs",
    "mcp-server-search-rs",
    "syntaur-capability-shim",
    "syntaur-gateway",
    "syntaur-voice-pipeline",
    "syntaur-sdk",
    "syntaur-mod",
    "syntaur-hwscan",
    "syntaur-setup",
    "syntaur-license-server",
    "syntaur-viewer",
    "rust-media-bridge",
    "mace",
    "syntaur-isolation-tests",
    "syntaur-ship",
    "crates/syntaur-zwave",
    "crates/rust-aidot",
    "crates/rust-kasa",
    "crates/rust-nexia",
    "crates/syntaur-matter",
    "crates/syntaur-matter-ble",
    "crates/syntaur-matter-ip",
    "crates/syntaur-vault",
    "crates/syntaur-topo",
    "crates/syntaur-verify",
]
# `rust-aidot-harvest` is INTENTIONALLY excluded from the workspace.
# It depends on the `rsa` crate, which has an unpatched timing-attack
# advisory (RUSTSEC-2023-0071 — "Marvin Attack"). The advisory is a
# decryption-side sidechannel against RSA PRIVATE keys; we only
# ENCRYPT with a vendor public key during one-time device onboarding,
# so the attack isn't reachable in our code. Keeping rsa out of the
# main lockfile keeps `cargo audit` clean across all our runtime
# crates. Build that crate explicitly when you need to re-onboard:
#   cd crates/rust-aidot-harvest && cargo build --release
exclude = [
    "crates/rust-aidot-harvest",
]

[workspace.package]
# Single source of truth for the main product version. All crates that
# track the Syntaur release line inherit this via `version.workspace = true`.
# Independent sub-crates (crates/rust-aidot, crates/rust-kasa, crates/rust-nexia,
# crates/syntaur-matter, crates/syntaur-matter-ble, crates/syntaur-zwave,
# mcp-server-filesystem-rs, syntaur-hwscan, syntaur-license-server, syntaur-mod)
# keep their own versions so they can be released on their own cadence.
version = "0.5.1"
edition = "2021"
license = "MIT"
authors = ["Sean"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true

# ── CVE-driven patches ────────────────────────────────────────────────
# rustls-webpki 0.102.8 has three open advisories (RUSTSEC-2026-0049,
# -0098, -0104) pulled in transitively via rumqttd/rumqttc. rumqttd
# 0.20.0 is the latest upstream release (Sept 2025) so a version bump
# on our MQTT deps isn't available; the patch override forces all
# downstream callers to the fixed version 0.103.x.
[patch.crates-io]
rustls-webpki = { git = "https://github.com/rustls/webpki", tag = "v/0.103.13" }
