[package]
name = "mcp-protocol"
version = "0.1.0"
edition.workspace = true
description = "Shared MCP (Model Context Protocol) types and stdio transport for syntaur"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
