[package]
name = "mcp-protocol"
version.workspace = true
edition.workspace = true
description = "Shared MCP (Model Context Protocol) types and stdio transport for Syntaur"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
