[package]
name = "mcp-server-search-rs"
version.workspace = true
edition.workspace = true
description = "Pure-Rust replacement for the SearXNG MCP shim"

[[bin]]
name = "mcp-server-search-rs"
path = "src/main.rs"

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false }
url = "2"
html2text = "0.17"
