[package]
name = "openclaw-capability-shim"
version = "0.1.0"
edition.workspace = true
description = "Tiny standalone HTTP server that exposes one or more capabilities for openclaw to call into. Run on any always-on host to offload work from openclawprod without committing to the full v5 distributed multi-host design."

[[bin]]
name = "openclaw-capability-shim"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
