[package]
name = "openclaw-hwscan"
version = "0.1.0"
edition.workspace = true
description = "Hardware detection and LLM service discovery for OpenClaw"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
log = { workspace = true }
