[package]
name = "openclaw-setup"
version = "0.1.0"
edition.workspace = true
description = "First-run configuration generator for Syntaur"

[dependencies]
openclaw-sdk = { path = "../openclaw-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
