[package]
name = "rust-media-bridge"
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "syntaur-media-bridge"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# CDP driver for Chromium automation
chromiumoxide = "0.7"

# Platform helpers
directories = "5"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
