[package]
name = "syntaur-gateway"
version = "0.4.3"
edition.workspace = true

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }
syntaur-sdk = { path = "../syntaur-sdk" }
snow = "0.10"

chrono-tz = "0.10"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
lru = "0.12"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
libc = "0.2"
rand = "0.8"
mdns-sd = "0.13"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
async-stream = "0.3"
maud = "0.26"
serde_yaml = "0.9"

# PDF text extraction for the uploaded_files RAG connector.
pdf-extract = "0.7"
# AcroForm field filling for IRS Form 4868 (extension filing).
lopdf = "0.34"

# Document format extractors for RAG knowledge indexing.
calamine = "0.26"       # XLSX/XLS/ODS spreadsheets
quick-xml = "0.37"      # DOCX/PPTX/ODT/EPUB XML parsing
zip = "2"               # OOXML/ODF/EPUB are ZIP archives
mailparse = "0.15"      # RFC 5322 .eml email parsing

# Phase 0 voice skill router: pure-Rust ONNX embeddings for find_tool dispatch.
# BGE-small-en-v1.5 (~30MB) is downloaded into the cache dir on first init.
# Uses CPU; 384-dim embeddings; ~50ms per query on a desktop Intel.
fastembed = "4"

shell-words = "1"
thiserror = { workspace = true }
subtle = "2"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["limit", "cors"] }

# Terminal / Coders module
bytes = "1"

# Local music library — pure-Rust audio metadata (MP3/FLAC/M4A/OGG/WAV/Opus).
lofty = "0.22"
tokio-util = { version = "0.7", features = ["io"] }

ed25519-dalek = "2"

# Smart Home and Network module — MQTT driver (week 8). rumqttc is the
# pure-Rust async MQTT client we use for both discovery-topic scanning
# and (later) device control. No broker runs in-process for v1; user
# points us at their Mosquitto / HA broker via config.
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }
hex = "0.4"
rustls-pemfile = "2"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "1"
url = "2.5.8"

# rs-matter — pure-Rust Matter Controller (upstream). Pinned to main HEAD
# 2026-04-20. The bridge in tools/matter.rs (python-matter-server WS) is
# the production path; tools/matter_direct.rs is a skeleton wrapper using
# upstream primitives (CASE init, IM Client, mDNS query, NOC gen) for the
# eventual cutover. See vault: projects/syntaur_smart_home_module.md.
rs-matter = { git = "https://github.com/project-chip/rs-matter", rev = "993a0763e450183acb5181073223ab48e44b8c2e", default-features = false, features = ["os", "rustcrypto", "log"] }

[dev-dependencies]
# Used by #[cfg(test)] modules (crypto, schema migrations, etc.).
# Was previously referenced without being declared — `cargo test` failed
# to resolve the import until this section existed.
tempfile = "3"
