[package]
name = "syntaur-isolation-tests"
version = "0.4.2"
edition = "2021"
description = "Integration tests — prove user B cannot reach user A's data across every mutating endpoint."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
colored = "2"
rand = "0.8"
urlencoding = "2"
chrono = "0.4"

[[bin]]
name = "syntaur-isolation-tests"
path = "src/main.rs"
