[package]
name = "syntaur"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rusqlite = { version = "0.39", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
base64 = "0.22"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
dashmap = "6"
futures-util = "0.3"
async-stream = "0.3"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
native-tls = "0.2"
urlencoding = "2"
rumqttc = { version = "0.25", default-features = false }
socket2 = "0.6"

[profile.release]
opt-level = "s"
lto = true
strip = true
