[package]
name = "syntaur-mod"
version = "0.1.0"
edition.workspace = true
description = "Module manager CLI for Syntaur"

[[bin]]
name = "syntaur-mod"
path = "src/main.rs"

[dependencies]
syntaur-sdk = { path = "../syntaur-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
