[package]
name = "syntaur-setup"
version = "0.4.0"
edition.workspace = true
description = "First-run configuration generator for Syntaur"

[dependencies]
syntaur-sdk = { path = "../syntaur-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
