[package]
name = "syntaur-viewer"
version.workspace = true
edition.workspace = true
description = "Lightweight dashboard viewer for Syntaur — native OS webview, no full browser needed"

[[bin]]
name = "syntaur-viewer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.9"
webkit6 = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
tao = "0.35"
wry = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
tao = "0.35"
wry = "0.55"
