[package]
name = "rust-aidot-harvest"
version = "0.1.0"
edition = "2021"

# INTENTIONALLY EXCLUDED from the root [workspace] (see root
# Cargo.toml `[workspace.exclude]`). This keeps the `rsa` crate out of
# the workspace's Cargo.lock — rsa has no fix for RUSTSEC-2023-0071
# (Marvin timing attack). Our usage here is encryption-only on a
# one-time setup flow, so the attack isn't reachable, but keeping
# cargo-audit clean matters more than sharing a lockfile.
#
# Build with: `cd crates/rust-aidot-harvest && cargo build --release`
# Runs with:  `./target/release/aidot-harvest <email> <password>`

[lib]
name = "rust_aidot_harvest"
path = "src/lib.rs"

[[bin]]
name = "aidot-harvest"
path = "src/bin/aidot_harvest.rs"

[dependencies]
rust-aidot = { path = "../rust-aidot" }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rsa = "0.9"
base64 = "0.22"
rand = "0.8"
