[package]
name = "rust-aidot"
version = "0.1.0"
edition.workspace = true

[lib]
name = "rust_aidot"
path = "src/lib.rs"

[[bin]]
name = "aidot-ctl"
path = "src/bin/aidot_ctl.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
aes = "0.8"
cipher = "0.4"
chrono = "0.4"
# For the one-time cloud harvest (runs once at setup, never again).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rsa = "0.9"
base64 = "0.22"
rand = "0.8"
