[package]
name = "rust-aidot"
version = "0.1.0"
edition.workspace = true

[lib]
name = "rust_aidot"
path = "src/lib.rs"

[[bin]]
name = "aidot-ctl"
path = "src/bin/aidot_ctl.rs"

# NOTE: cloud-harvest used to be a feature here, gated on `rsa`. It
# now lives in the separate, workspace-excluded `rust-aidot-harvest`
# crate so that `rsa` (RUSTSEC-2023-0071, no upstream fix available)
# never ends up in the main workspace Cargo.lock. See that crate's
# Cargo.toml for the rationale. This crate is LAN-only.

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
aes = "0.8"
cipher = "0.4"
chrono = "0.4"
