[package]
name = "rust-kasa"
version = "0.1.0"
edition.workspace = true

[lib]
name = "rust_kasa"
path = "src/lib.rs"

[[bin]]
name = "kasa-ctl"
path = "src/bin/kasa_ctl.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
aes = "0.8"
cipher = "0.4"
cbc = "0.1"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
hex = "0.4"
base64 = "0.22"
