[package]
name = "rust-nexia"
version = "0.1.0"
edition.workspace = true

[lib]
name = "rust_nexia"
path = "src/lib.rs"

[[bin]]
name = "nexia-probe"
path = "src/bin/nexia_probe.rs"

[[bin]]
name = "nexia-ctl"
path = "src/bin/nexia_ctl.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
uuid = { version = "1", features = ["v4"] }
